--- a/_data/CONTRIBUTORS.yaml
+++ b/_data/CONTRIBUTORS.yaml
@@ -57,3 +57,9 @@ Rafael Andrade Buono:
     git: rabuono
     affiliation: VIB-UGent / ELIXIR-BE
     role: editor
+Katharina Lauer:
+    git: klauer2207
+    email: katharina.lauer@elixir-europe.org
+    orcid: 0000-0002-4347-7525
+    role: editor
+    affiliation: ELIXIR Hub
